--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-app",
   "version": "0.1.0",
-  "homepage": "https://NIVEDITHA54.github.io/portfolio-app",
+  "homepage": "https://NIVEDITHA54.github.io/MyPortfolio",
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.2.4",
